assets/src/scss/app.scss
@import "npm:@fontsource/merriweather/400.css";
@import "npm:@fontsource/roboto/300.css";
@import "npm:@fontsource/roboto/700.css";
@import "npm:bootstrap-icons/font/bootstrap-icons.css";

// 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
// @import "npm:bootstrap/scss/functions";

// 2. Include any default variable overrides here
$waf-primary-accent-color:  var(--primary_accent_color);
$waf-bg-gray:               var(--primary_accent_gray);
$link-decoration:           underline;
// $font-size-base:         0.875rem; // Approx be `14px`
$font-family-sans-serif:    "Roboto", sans-serif;
$font-family-serif:         "Merriweather", serif;
$font-family-base:          $font-family-sans-serif;
$headings-font-family:      $font-family-serif;
$font-weight-base:          300;
$form-text-color:           black;
$body-color:                black;

// $web-font-path:          "";

// Branding css variables could be set via
// Wagtail admin > Settings > Branding settings.
// :root {
//   --primary_accent_color: rgb(4, 55, 242);
//   --primary_accent_gray: rgb(216, 216, 216);
// }

@import "npm:bootstrap/scss/bootstrap";

// // 3. Include remainder of required Bootstrap stylesheets (including any separate color mode stylesheets)
// @import "npm:bootstrap/scss/variables";
// @import "npm:bootstrap/scss/variables-dark";
// // 4. Include any default map overrides here
// @import "_bootstrap_custom";

// More 3rd party packages
@import "npm:tom-select/dist/css/tom-select.bootstrap5.min.css";

// flatpickr for date and time inputs, as Firefox do not have a widget for time inputs
// https://flatpickr.js.org/getting-started/
@import "npm:flatpickr/dist/flatpickr.min.css";


@media print {
    .collapse {
        display: block !important;
    }
}


.btn-custom-primary {
    @extend .btn-primary;
    background-color: var(--primary_accent_color);

    &:hover {
        background-color: var(--primary_accent_color_darken);
    }
}


h1, .h1,
h2, .h2,
h3, .h3,
h4, .h4,
h5, .h5 {
    color: $waf-primary-accent-color;
    font-weight: 400;
}

b {
    font-weight: bold;
}


// .select2.select2-container {
//     width: auto !important;
//     max-width: 100%;
// }

// .select2-container--default .select2-search--inline .select2-search__field {
//     font-weight: 300;
// }


.form-group {
    margin-bottom: 1em;

    & > label {
    font-weight: 400;
    }
}


.to-form-check-inline {
    &.widget-class-radio-select,
    &.widget-class-checkbox-select-multiple {
        div.form-check {
            @extend .form-check-inline;
        }
    }
}

.field-secondary {
    @extend .text-muted;

    .form-control {
        @extend .form-control-sm;
    }

    .form-text {
        @extend .text-muted;
    }
}


textarea.form-control {
    height: 5em;
}


header {
    padding-top: 15px;
    margin-bottom: 2em;
    background-color: $waf-bg-gray;

    .languageswitcher {
        text-transform: uppercase;
    }
}

.navbar-header {
    display: block;
    height: 60px;
    background-color: transparent;
    background-repeat: no-repeat;
    background-position: 0 0;
    background-size: contain;

    /*
    Setting the brand logo is handled via a context_processor
    body.lang_en & {
        background-image: url("/static/dist/img/logo_en.svg");
    }
    body.lang_de & {
        background-image: url("/static/dist/img/logo_de.svg");
    }
    */

    strong { display: none; }
}

.navbar-brand {
    text-transform: uppercase;
    text-decoration: none;
}

footer {
    margin-top: 2em;
    padding: 2em 0;
    background-color: $waf-primary-accent-color;
    line-height: 4em;

    img {
        height: 4em;
    }
}

